--- a/free.html
+++ b/free.html
@@ -17,6 +17,7 @@
        <input type="text">
        <br>
        <button type="submit"> clear</button>
+       <button>clear2</button>
     </form>
 </div>
 </body>
